Continued evaluating the performance of BERT

--- a/classifier/bert_fake_news_classifier.ipynb
+++ b/classifier/bert_fake_news_classifier.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractmethod"
+    "from abc import ABC, abstractmethod\n",
+    "from typing import Callable"
    ]
   },
   {
@@ -22,10 +23,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow_hub import KerasLayer\n",
     "import tensorflow as tf\n",
     "\n",
-    "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras.layers import Dense, Input, LSTM\n",
     "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from official.nlp import optimization\n",
     "\n",
     "from official.nlp.bert.tokenization import FullTokenizer"
    ]
@@ -148,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BERT Model"
+    "## BERT Models"
    ]
   },
   {
@@ -157,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_bert_model(encoder, input_size):\n",
+    "def base_bert_model(encoder, input_size):\n",
     "    # Create BERT input layers\n",
     "    def input_layer(input_name):\n",
     "        return Input(shape=(input_size,), dtype=tf.int32, name=input_name)\n",
@@ -168,14 +173,114 @@
     "        'input_type_ids': input_layer(\"inputs/input_type_ids\"),\n",
     "    }\n",
     "\n",
-    "    # BERT's pooled output\n",
-    "    encoder_pooled_output = encoder(inputs)['pooled_output']\n",
+    "    # BERT's output\n",
+    "    return inputs, encoder(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT model with a Dense sigmoid output layer\n",
+    "def dense_bert_model(encoder, input_size):\n",
+    "    inputs, bert_output = base_bert_model(encoder, input_size)\n",
     "\n",
     "    # Dense layer output\n",
-    "    dense_output = Dense(1, activation='sigmoid')(encoder_pooled_output)\n",
+    "    dense_output = Dense(1, activation='sigmoid')(bert_output['pooled_output'])\n",
     "\n",
     "    # Create the Keras model and compile\n",
     "    return Model(inputs, dense_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BERT model with an LSTM output layer\n",
+    "def create_bert_model_lstm(encoder, input_size, **kwargs):\n",
+    "    bert_pooled_output = base_bert_model(encoder, input_size)['pooled_output']\n",
+    "\n",
+    "    # LSTM layer output\n",
+    "    dense_output = LSTM(1, **kwargs)(bert_pooled_output)\n",
+    "\n",
+    "    # Create the Keras model and compile\n",
+    "    return Model(inputs, dense_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BertModelEvalHandler(ABC):\n",
+    "    def __init__(self, bert_url: str, bert_input_size: int, bert_tokenizer_class: AbstractBertTokenizer.__class__,\n",
+    "                bert_model: Callable):\n",
+    "        self.encoder = KerasLayer(bert_url, trainable=True)\n",
+    "        self.tokenizer = bert_tokenizer_class(self.encoder, bert_input_size)\n",
+    "        self.bert = bert_model(self.encoder, bert_input_size)\n",
+    "    \n",
+    "    def train_bert(self, X, y, batch_size, epochs, X_validation, y_validation, optimizer_name, lr, checkpoint_path=None, \n",
+    "                   tensorboard_path=None):\n",
+    "        # Tokenize input data\n",
+    "        X = self.tokenizer.tokenize_input(X)\n",
+    "        y = self.tokenizer.tokenize_labels(y)\n",
+    "        X_validation = self.tokenizer.tokenize_input(X_validation)\n",
+    "        y_validation = self.tokenizer.tokenize_labels(y_validation)\n",
+    "        \n",
+    "        # Setup callbacks\n",
+    "        callbacks = []\n",
+    "        if checkpoint_path is not None:\n",
+    "            callbacks.append(ModelCheckpoint(\n",
+    "                filepath=checkpoint_path, \n",
+    "                save_weights_only=True,\n",
+    "                save_best_only=True,\n",
+    "                verbose=1,\n",
+    "            ))\n",
+    "        \n",
+    "        if tensorboard_path is not None:\n",
+    "            callbacks.append(tf.keras.callbacks.TensorBoard(log_dir=tensorboard_path))\n",
+    "        \n",
+    "        # Setup optimizer\n",
+    "        if optimizer_name == 'adam':\n",
+    "            optimizer = tf.keras.optimizers.Adam(lr)\n",
+    "        elif optimizer_name == 'adamw':\n",
+    "            total_training_steps = epochs * len(X['input_word_ids']) / batch_size\n",
+    "            warmup_steps = int(0.1 * total_training_steps)\n",
+    "            optimizer = optimization.create_optimizer(\n",
+    "                init_lr=lr,\n",
+    "                num_train_steps=total_training_steps,\n",
+    "                num_warmup_steps=warmup_steps,\n",
+    "                optimizer_type='adamw'\n",
+    "            )\n",
+    "        \n",
+    "        # Compile and train BERT\n",
+    "        self.bert.compile(\n",
+    "            optimizer=optimizer, \n",
+    "            loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
+    "            metrics=tf.metrics.BinaryAccuracy(),\n",
+    "        )\n",
+    "        \n",
+    "        self.train_history = self.bert.fit(\n",
+    "            x=X,\n",
+    "            y=y,\n",
+    "            batch_size=batch_size,\n",
+    "            epochs=epochs,\n",
+    "            validation_data=(X_validation, y_validation),\n",
+    "            callbacks=callbacks,\n",
+    "        )\n",
+    "        return self.train_history"
    ]
   }
  ],
