--- a/classifier/preprocessing/preprocessing.ipynb
+++ b/classifier/preprocessing/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,13 @@
     "import numpy as np\n",
     "from bs4 import BeautifulSoup\n",
     "from unidecode import unidecode\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "from functools import reduce"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
