Added code to train the best models

--- a/classifier/ensemble_model.ipynb
+++ b/classifier/ensemble_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,17 +1382,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combining the Ensemble model"
+    "# All Statistics Model\n",
+    "* Concatenate all of the statistical features and input them into a single model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_models():\n",
-    "    return []"
+    "# Stats data\n",
+    "all_stats_extractor = TweetStatsExtractor(extractors=[\n",
+    "    tag_counts,\n",
+    "    retweet_ratio,\n",
+    "    emojis_count,\n",
+    "    std_dev_words,\n",
+    "    syllables_to_words_ratios,\n",
+    "    average_tweet_lengths,\n",
+    "    type_to_token_ratio,\n",
+    "    truncated_tweets,\n",
+    "    punctuation_counts,\n",
+    "    number_counts,\n",
+    "    average_personal_pronouns,\n",
+    "    char_to_words_ratio,\n",
+    "    quote_counts,\n",
+    "    capitalisation_counts,\n",
+    "    named_entities_count_array,\n",
+    "    tweet_sentiment_scores,\n",
+    "    overall_sentiment,\n",
+    "])\n",
+    "tweet_all_stats_train = all_stats_extractor.transform(tweet_train_processed)\n",
+    "tweet_all_stats_val = all_stats_extractor.transform(tweet_val_processed)\n",
+    "tweet_all_stats_test = all_stats_extractor.transform(tweet_test_processed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_search_best_params, all_search_df = grid_search(\n",
+    "    tweet_all_stats_train, label_train, tweet_all_stats_val, label_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_search_best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_search_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combining the Ensemble model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training the best performing models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Readability Model - SVC\n",
+    "readability_model = Pipeline([\n",
+    "    ('SelectKBest', SelectKBest()), \n",
+    "    ('Estimator', SVC())\n",
+    "])\n",
+    "readability_model.set_params({\n",
+    "    'Estimator__C': 1, \n",
+    "    'Estimator__kernel': 'rbf',\n",
+    "    'Estimator__probability': True,\n",
+    "    'SelectKBest__k': 15,\n",
+    "})\n",
+    "\n",
+    "readability_model.fit(tweet_read_stats_train, label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NER Model - RandomForestClassifier\n",
+    "ner_model = Pipeline([\n",
+    "    ('SelectKBest', SelectKBest()), \n",
+    "    ('Estimator', RandomForestClassifier())\n",
+    "])\n",
+    "ner_model.set_params({\n",
+    "    'Estimator__criterion': 'gini',\n",
+    "    'Estimator__min_samples_leaf': 1,\n",
+    "    'Estimator__n_estimators': 25,\n",
+    "    'SelectKBest__k': 17,\n",
+    "})\n",
+    "\n",
+    "ner_model.fit(tweet_ner_stats_train, label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sentiment Model - RandomForestClassifier\n",
+    "sentiment_model = Pipeline([\n",
+    "    ('SelectKBest', SelectKBest()), \n",
+    "    ('Estimator', RandomForestClassifier())\n",
+    "])\n",
+    "sentiment_model.set_params({\n",
+    "    'Estimator__criterion': 'entropy',\n",
+    "    'Estimator__min_samples_leaf': 8,\n",
+    "    'Estimator__n_estimators': 100,\n",
+    "    'SelectKBest__k': 8\n",
+    "})\n",
+    "\n",
+    "sentiment_model.fit(tweet_sent_stats_train, label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All Statistics Model - \n",
+    "all_stats_model = Pipeline([\n",
+    "    ('SelectKBest', SelectKBest()), \n",
+    "    ('Estimator', ?())\n",
+    "])\n",
+    "all_stats_model.set_params({\n",
+    "\n",
+    "})\n",
+    "\n",
+    "all_stats_model.fit(tweet_all_stats_train, label_train)"
    ]
   },
   {
@@ -1400,9 +1545,7 @@
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "models = load_models()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
