Preprocessing evaluation: Evaluated BERT models when applying different training data preprocessing functions

--- a/classifier/preprocessing/preprocessing.ipynb
+++ b/classifier/preprocessing/preprocessing.ipynb
@@ -52,7 +52,7 @@
     "    return demoji.replace_with_desc(tweet, \":\")\n",
     "\n",
     "def replace_tags(tweet):\n",
-    "    \"\"\" Replace #HASHTAG# and #URL# #USER# with tags [tag] and [url], [user] \"\"\"\n",
+    "    \"\"\" Replace #HASHTAG#, #URL#, #USER#, RT with tags [tag], [url], [user], [retweet] \"\"\"\n",
     "    tweet = tweet.replace(\"#HASHTAG#\", \"[hashtag]\")\n",
     "    tweet = tweet.replace(\"#URL#\", \"[url]\")\n",
     "    tweet = tweet.replace(\"#USER#\", \"[user]\")\n",
