Setting up classifier evaluation using Tune in Python

--- a/classifier/bert_fake_news_classifier.ipynb
+++ b/classifier/bert_fake_news_classifier.ipynb
@@ -26,7 +26,7 @@
     "from tensorflow_hub import KerasLayer\n",
     "import tensorflow as tf\n",
     "\n",
-    "from tensorflow.keras.layers import Dense, Input, LSTM\n",
+    "from tensorflow.keras.layers import Dense, Input\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -195,23 +195,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# BERT model with an LSTM output layer\n",
-    "def create_bert_model_lstm(encoder, input_size, **kwargs):\n",
-    "    bert_pooled_output = base_bert_model(encoder, input_size)['pooled_output']\n",
-    "\n",
-    "    # LSTM layer output\n",
-    "    dense_output = LSTM(1, **kwargs)(bert_pooled_output)\n",
-    "\n",
-    "    # Create the Keras model and compile\n",
-    "    return Model(inputs, dense_output)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,7 +263,9 @@
     "            validation_data=(X_validation, y_validation),\n",
     "            callbacks=callbacks,\n",
     "        )\n",
-    "        return self.train_history"
+    "        return self.train_history\n",
+    "    \n",
+    "    "
    ]
   }
  ],
