--- a/classifier/ensemble_model.ipynb
+++ b/classifier/ensemble_model.ipynb
@@ -255,7 +255,7 @@
     "grid_search_param_grids = [\n",
     "    {\"Estimator__penalty\": [\"l1\", \"l2\"], \n",
     "     \"Estimator__C\": [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 768, 1024, 1280], \n",
-    "     \"Estimator__solver\": [\"newton-cg\", \"lbfgs\", \"liblinear\"]},\n",
+    "     \"Estimator__solver\": [\"newton-cg\", \"lbfgs\", \"liblinear\", \"sag\", \"saga\"]},\n",
     "    {\"Estimator__C\": [1, 2, 4, 8, 16, 32, 64, 128, 256, 512, 768, 1024, 1280], \n",
     "     \"Estimator__kernel\": [\"linear\", \"poly\", \"rbf\", \"sigmoid\"], \n",
     "     \"Estimator__probability\": [True]},\n",
@@ -340,7 +340,9 @@
     "    * Use of punctuation marks (!,?, etc) (http://ceur-ws.org/Vol-2380/paper_263.pdf)\n",
     "    * Use of numerical values\n",
     "    * Use of personal pronouns (https://sml.stanford.edu/ml/2008/01/hancock-dp-on-lying.pdf)\n",
-    "    * Automated Readability Index (ratio of chars to words, and words to sentences)\n",
+    "    * chars to words ratio\n",
+    "    * quote counts\n",
+    "    * capitalisation counts\n",
     "\n",
     "\n",
     "* \"An Ensemble Model Using N-grams and Statistical Features to Identify Fake News Spreaders on Twitter\" paper (http://ceur-ws.org/Vol-2696/paper_189.pdf) built a statistical model to support their N-gram model for this task (and won). \"FacTweet: Profiling Fake News Twitter Accounts\" used statistical information, such as emotions, style and sentiment to profile fake news spreading users.\n",
@@ -365,19 +367,23 @@
    "outputs": [],
    "source": [
     "# Extractor functions (to be used in TweetStatsExtractor)\n",
-    "def tag_counts(user_tweets, tags=['RT', '#USER#', '#HASHTAG#', '#URL#']):\n",
+    "def tag_counts(user_tweets, tags=['#USER#', '#HASHTAG#', '#URL#']):\n",
     "    \"\"\" Returns the average number of tag used, for each tag in tags \"\"\"\n",
     "    return np.mean([[tweet.count(tag) for tag in tags] for tweet in user_tweets], axis=0)\n",
     "\n",
     "\n",
     "def retweet_ratio(user_tweets):\n",
-    "    \"\"\" Returns the ratio of retweets to regular tweets \"\"\"\n",
+    "    \"\"\" Returns the ratio of retweets to regular tweets, and the ratio of second-hand retweets to regular tweets \"\"\"\n",
     "    retweets = 0\n",
+    "    second_retweets = 0\n",
     "    for tweet in user_tweets:\n",
     "        if tweet.startswith(\"RT\"):\n",
     "            retweets += 1\n",
+    "        if tweet.startswith(\"RT RT\")\n",
+    "            second_retweets += 1\n",
     "    \n",
-    "    return retweets / len(user_tweets)\n",
+    "    return np.asarray([retweets / len(user_tweets), second_retweets / len(user_tweets)])\n",
+    "\n",
     "\n",
     "def emojis_count(user_tweets):\n",
     "    \"\"\" Returns the following emoji counts for this user: total number of emojis used, average number of emojis used \n",
@@ -439,16 +445,12 @@
     "\n",
     "\n",
     "def number_counts(user_tweets):\n",
-    "    \"\"\" Returns the following counts: average number of numerical values per tweet (e.g. \"7,000\"), average number of \n",
-    "    monetary values per tweet (e.g. \"$90,000\", \"£90 Million\") \"\"\"\n",
+    "    \"\"\" Returns the following counts: number of numerical values in the users tweets (e.g. \"7,000\"), number of \n",
+    "    monetary values in the users tweets (e.g. \"$90,000\", \"£9.35\") \"\"\"\n",
     "    number_matcher = \"\\d+(?:,\\d+)*(?:\\.\\d+)?\"\n",
-    "    mean_numbers = np.mean([\n",
-    "        len(re.findall(f\"(?:^| )(?<![£$€]){number_matcher}\", tweet)) for tweet in user_tweets\n",
-    "    ])\n",
-    "    mean_money = np.mean([\n",
-    "        len(re.findall(f\"[£$€]{number_matcher}\", tweet)) for tweet in user_tweets\n",
-    "    ])\n",
-    "    return np.asarray([mean_numbers, mean_money])\n",
+    "    numbers = sum([len(re.findall(f\"(?:^| )(?<![£$€]){number_matcher}\", tweet)) for tweet in user_tweets])\n",
+    "    money = sum([len(re.findall(f\"[£$€]{number_matcher}\", tweet)) for tweet in user_tweets])\n",
+    "    return np.asarray([numbers, money])\n",
     "\n",
     "\n",
     "def average_personal_pronouns(user_tweets):\n",
@@ -534,6 +536,7 @@
     "    \"Average number of '#URL#' tags per tweet\",\n",
     "    # retweet_ratio\n",
     "    \"Ratio of retweets to tweets\",\n",
+    "    \"Ratio of second-hand retweets to tweets\",\n",
     "    # emojis_count\n",
     "    \"Total number of emojis\",\n",
     "    \"Average number of emojis per tweet\",\n",
@@ -557,8 +560,8 @@
     "    \"Average number of :\",\n",
     "    \"Total punctuation type-token ratio\",\n",
     "    # number_counts\n",
-    "    \"Average number of numerical values\",\n",
-    "    \"Average number of monetary values\",\n",
+    "    \"Total number of numerical values\",\n",
+    "    \"Total number of monetary values\",\n",
     "    # average_personal_pronouns\n",
     "    \"Average number of personal pronouns\",\n",
     "    # char_to_words_ratio\n",
@@ -1772,7 +1775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
